# graphics-2020-01-01

./: Cargo.toml  README.md
src/: main.rs
src/gpu/compute/: plan.comp  plan.spv  raid.comp  raid.spv  trade.comp  trade.spv
src/gpu/render/: fragment.frag  fragment.spv  vertex.spv  vertex.vert
