[package]
name = "graphics-2020-01-01"
version = "0.1.0"
authors = ["Mehmet Oguz Derin <mehmetoguzderin@mehmetoguzderin.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
image = "0.22.3"
time = "0.2.1"
winit = "0.20.0-alpha5"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", features = [ "vulkan" ] }
zerocopy = "0.2.8"